<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/cust_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/colorPrimaryDark"
        android:hint="@string/enter_customer_name"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />


    <EditText
        android:id="@+id/credit_card"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimaryDark"
        android:hint="@string/credit_card"
        android:inputType="number"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/amount"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimaryDark"
        android:hint="@string/amount"
        android:inputType="number"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <Button
        android:id="@+id/print"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/print"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/email"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/email"
        android:textColor="@color/white" />

</LinearLayout>